# feature-asset-inventory-backend

./: .env.example  .gitignore  README.md  RUN_LOCAL.md  manifest.schema.json  pyproject.toml  requirements.txt  scaffold.metadata.json
.github/workflows/: ci.yml  deploy.dev.yml  deploy.prod.yml  deploy.test.yml
app/: config.py  db.py  dependencies.py  main.py
app/api/: cache_capabilities.py  deployments.py  feature.py  groups.py  health.py  intune.py  inventory.py  lookup.py  meraki.py  networks.py  platform_capabilities.py  shipments.py  software.py  users.py
app/domain/: models.py
app/events/: models.py  publisher.py
app/infrastructure/: logging.py
app/models/: __init__.py  inventory.py
app/platform/: auth_context.py  config_client.py  registry_client.py  registry_models.py  response_models.py
app/runtime/: database.py
contracts/: api-contract.md  bootstrap-response-example.json  bootstrap-response.local.json  bootstrap-runtime-example.json  events-contract.md  feature-manifest.json  feature-manifest.local.json  registry-contract.md
docs/: architecture.md  authentication.md  bootstrap-response-contract.md  bootstrap-runtime-contract.md  cache-capability.md  database-capability.md  feature-development-guide.md  onboarding.md  registry-integration.md  runbook.md
scripts/: bootstrap.ps1  bootstrap.sh  publish-local.ps1  publish-local.sh  render-manifest.py  render-registry-payload.py  run-local.ps1  run-local.sh  serve-bootstrap-mock.py  validate-manifest.py  validate.ps1  validate.sh
sql/: locations.sql
tests/: test_feature.py  test_health.py
(+57 files in other folders)
